--- a/src/patternfly/components/ExpandableSection/expandable-section-toggle.hbs
+++ b/src/patternfly/components/ExpandableSection/expandable-section-toggle.hbs
@@ -5,7 +5,7 @@
   {{#> button
     button--IsLink=true
     button--IsInline=expandable-section--IsTruncate
-    button--AriaExpanded=expandable-section--IsExpanded
+    button--AriaExpanded=(ternary expandable-section--IsExpanded expandable-section--IsExpanded false)
     button--aria-controls=(ternary expandable-section--id (concat expandable-section--id '-content') null)
     button--id=(concat expandable-section--id '-toggle')
     button--icon-template=(ternary expandable-section--IsTruncate null "expandable-section-toggle-icon")}}
