--- a/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
+++ b/src/patternfly/components/Table/TableCells/table-cell-toggle.hbs
@@ -4,7 +4,7 @@
     button--IsPlain=true
     button--IsIcon=true
     button--icon-template="table-toggle-icon"
-    button--AriaExpanded=table-tr--IsExpanded
+    button--AriaExpanded=(ternary table-tr--IsExpanded table-tr--IsExpanded false)
     button--modifier=(ternary table-tr--IsExpanded "pf-m-expanded" "")
     button--aria-describedby=table-tr--IsExpanded
     button--aria-label=(ternary IsThead 'Toggle all rows' 'Toggle row')
