--- a/src/patternfly/components/Table/table-tree-view-details-toggle.hbs
+++ b/src/patternfly/components/Table/table-tree-view-details-toggle.hbs
@@ -5,7 +5,7 @@
   {{> button
     button--IsPlain=true
     button--IsIcon=true
-    button--AriaExpanded=table-tr--details--IsExpanded
+    button--AriaExpanded=(ternary table-tr--details--IsExpanded table-tr--details--IsExpanded false)
     button--icon-template="table-details-toggle-icon"
     button--aria-label=(concat table--id '-' table-tr--tree--index '--tree-table--details-toggle')}}
 </span>
