fix(drawer): fix primary-detail pattern drawer header

--- a/src/patternfly/components/Drawer/drawer-body.hbs
+++ b/src/patternfly/components/Drawer/drawer-body.hbs
@@ -1,6 +1,6 @@
 <div class="{{pfv}}drawer__body
   {{~#if drawer-body--HasPadding}}
-    pf-m-paddinng
+    pf-m-padding
   {{/if}}
   {{~#if drawer-body--modifier}}
     {{drawer-body--modifier}}
