--- a/src/patternfly/components/Card/card--description.hbs
+++ b/src/patternfly/components/Card/card--description.hbs
@@ -1,9 +1,6 @@
-<{{#if card--description--element}}{{card--description--element}}{{else}}small{{/if}} class="{{pfv}}card__description{{#if card--description--modifier}} {{card--description--modifier}}{{/if}}"
-  {{#if card--description--id}}
-    id="{{card--description--id}}"
-  {{/if}}
-  {{#if card--description--attribute}}
-    {{{card--description--attribute}}}
+<div class="{{pfv}}card__description{{#if card-description--modifier}} {{card-description--modifier}}{{/if}}"
+  {{#if card-description--attribute}}
+    {{{card-description--attribute}}}
   {{/if}}>
   {{> @partial-block}}
-</{{#if card--description--element}}{{card--description--element}}{{else}}small{{/if}}>
+</div>
