feat(Button): added circle variant

--- a/src/patternfly/components/Button/button--variations.hbs
+++ b/src/patternfly/components/Button/button--variations.hbs
@@ -59,3 +59,23 @@
 
   {{> button button--IsControl=true button--aria-label="Copy input" button--IsIcon=true button--icon="copy"}}
 {{/inline}}
+
+<br><br>
+
+<div><strong>Circle</strong></div>
+
+{{> button button--IsPrimary=true button--IsCircle=true button--icon="plus-circle"}}
+
+{{> button button--IsSecondary=true button--IsCircle=true button--icon="plus-circle"}}
+
+{{> button button--IsTertiary=true button--IsCircle=true button--icon="plus-circle"}}
+
+{{> button button--IsDanger=true button--IsCircle=true button--icon="plus-circle"}}
+
+{{> button button--IsWarning=true button--IsCircle=true button--icon="plus-circle"}}
+
+{{> button button--IsLink=true button--IsCircle=true button--icon="plus-circle"}}
+
+{{> button button--IsPlain=true button--IsCircle=true button--icon="times"}}
+
+{{> button button--IsControl=true button--IsCircle=true button--icon="copy"}}
