--- a/src/patternfly/components/Button/button.hbs
+++ b/src/patternfly/components/Button/button.hbs
@@ -26,6 +26,7 @@
     button--IsBlock='pf-m-block'
     button--IsSettings='pf-m-settings'
     button--IsHamburger='pf-m-hamburger'
+    button--IsCircle='pf-m-circle'
     button--modifier=button--modifier
   }}
   {{#if button--IsDisabled}}
