--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -371,6 +371,13 @@
   --#{$button}--hamburger-icon--arrow--collapse--path: path("M3,7 L1,5 L3,3");
   --#{$button}--hamburger-icon--bottom--collapse--path: path("M9,9 L5,9");
   --#{$button}--m-hamburger__icon--m-expand--ScaleX: -1;
+
+  // Circle
+  --#{$button}--m-circle--BorderRadius: var(--pf-t--global--border--radius--pill);
+  --#{$button}--m-circle--PaddingBlockStart: var(--pf-t--global--spacer--control--vertical--default);
+  --#{$button}--m-circle--PaddingInlineEnd: var(--pf-t--global--spacer--control--horizontal--compact);
+  --#{$button}--m-circle--PaddingBlockEnd: var(--pf-t--global--spacer--control--vertical--default);
+  --#{$button}--m-circle--PaddingInlineStart: var(--pf-t--global--spacer--control--horizontal--compact);
 }
 
 .#{$button} {
@@ -772,6 +779,14 @@
     &.pf-m-collapse {
       @include pf-v6-hamburger($collapse: true);
     }
+  }
+
+  &.pf-m-circle {
+    --#{$button}--BorderRadius: var(--#{$button}--m-circle--BorderRadius);
+    --#{$button}--PaddingBlockStart: var(--#{$button}--m-circle--PaddingBlockStart);
+    --#{$button}--PaddingInlineEnd: var(--#{$button}--m-circle--PaddingInlineEnd);
+    --#{$button}--PaddingBlockEnd: var(--#{$button}--m-circle--PaddingBlockEnd);
+    --#{$button}--PaddingInlineStart: var(--#{$button}--m-circle--PaddingInlineStart);
   }
 
   &:hover,
