--- a/src/patternfly/components/Button/button--variations.hbs
+++ b/src/patternfly/components/Button/button--variations.hbs
@@ -64,18 +64,18 @@
 
 <div><strong>Circle</strong></div>
 
-{{> button button--IsPrimary=true button--IsCircle=true button--icon="plus-circle"}}
+{{> button button--IsPrimary=true button--aria-label="Add primary circle variant" button--IsCircle=true button--icon="plus-circle"}}
 
-{{> button button--IsSecondary=true button--IsCircle=true button--icon="plus-circle"}}
+{{> button button--IsSecondary=true button--aria-label="Add secondary circle variant" button--IsCircle=true button--icon="plus-circle"}}
 
-{{> button button--IsTertiary=true button--IsCircle=true button--icon="plus-circle"}}
+{{> button button--IsTertiary=true button--aria-label="Add tertiary circle variant" button--IsCircle=true button--icon="plus-circle"}}
 
-{{> button button--IsDanger=true button--IsCircle=true button--icon="plus-circle"}}
+{{> button button--IsDanger=true button--aria-label="Add danger circle variant" button--IsCircle=true button--icon="plus-circle"}}
 
-{{> button button--IsWarning=true button--IsCircle=true button--icon="plus-circle"}}
+{{> button button--IsWarning=true button--aria-label="Add warning circle variant" button--IsCircle=true button--icon="plus-circle"}}
 
-{{> button button--IsLink=true button--IsCircle=true button--icon="plus-circle"}}
+{{> button button--IsLink=true button--aria-label="Add link circle variant" button--IsCircle=true button--icon="plus-circle"}}
 
-{{> button button--IsPlain=true button--IsCircle=true button--icon="times"}}
+{{> button button--IsPlain=true button--aria-label="Remove plain circle variant" button--IsCircle=true button--icon="times"}}
 
-{{> button button--IsControl=true button--IsCircle=true button--icon="copy"}}
+{{> button button--IsControl=true button--aria-label="Copy control circle variant" button--IsCircle=true button--icon="copy"}}
