--- a/src/patternfly/base/patternfly-common.scss
+++ b/src/patternfly/base/patternfly-common.scss
@@ -72,14 +72,14 @@
   position: relative;
 
   &::before {
-    content: "";
     position: absolute;
     inset: 0;
     pointer-events: none;
-    border: var(--pf-t--global--border--width--extra-strong) solid transparent;
-    border-radius: inherit;
+    content: "";
     background: linear-gradient(to right, #f56e6e 0%, #876fd4 65%, #5e40be 100%)
       border-box;
+    border: var(--pf-t--global--border--width--extra-strong) solid transparent;
+    border-radius: inherit;
     mask: linear-gradient(#000 0 0) padding-box, linear-gradient(#000 0 0);
     mask-composite: exclude;
   }
@@ -87,7 +87,7 @@
 
 @property --#{$pf-global}--pulse--BoxShadow--Spread {
   syntax: "<length>";
-  initial-value: 0px;
+  initial-value: 0;
   inherits: false;
 }
 
@@ -95,18 +95,18 @@
   &,
   &:focus,
   &:focus-within {
+    box-shadow: 0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(43.2% 0.232 292.759deg),
+    0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(50% 0.134 242.749deg),
+    0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815deg),
+    0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815deg);
     animation: #{$pf-global}-pulse 2s infinite ease-in-out;
-    box-shadow: 0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(43.2% 0.232 292.759),
-    0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(50% 0.134 242.749),
-    0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815),
-    0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815);
   }
 
   &.pf-m-inset {
-    box-shadow: inset 0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(43.2% 0.232 292.759),
-    inset 0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(50% 0.134 242.749),
-    inset 0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815),
-    inset 0px 0px var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815);
+    box-shadow: inset 0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(43.2% 0.232 292.759deg),
+    inset 0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(50% 0.134 242.749deg),
+    inset 0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815deg),
+    inset 0 0 var(--#{$pf-global}--pulse--BoxShadow--Spread) oklch(45.9% 0.187 3.815deg);
   }
 }
 
