fix(card): remove padding/margin on clickable cards action element

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -344,6 +344,11 @@
     --#{$card}__actions--MarginBlockStart: 0;
     --#{$card}__actions--MarginBlockEnd: 0;
   }
+
+  &:has(button, a) {
+    padding: 0;
+    margin: 0;
+  }
 }
 
 // Labels are used to handle states of selectable and clickable cards
