feat(Button): added circle styling to menu toggle

--- a/src/patternfly/components/MenuToggle/menu-toggle.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle.hbs
@@ -12,6 +12,7 @@
     menu-toggle--IsDanger='pf-m-danger'
     menu-toggle--IsPlaceholder='pf-m-placeholder'
     menu-toggle--IsSettings='pf-m-settings'
+    menu-toggle--IsCircle='pf-m-circle'
     menu-toggle--modifier=menu-toggle--modifier
   }}
   {{#unless menu-toggle--IsSplitButton}}
