fix: Moved the description outside the header.

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -32,7 +32,6 @@
   // Description
   --#{$card}__description--FontSize: var(--pf-t--global--font--size--body--sm);
   --#{$card}__description--Color: var(--pf-t--global--text--color--subtle);
-  --#{$card}__description--PaddingBlockStart: var(--pf-t--global--spacer--md);
   
 
   // Expandable
@@ -250,6 +249,7 @@
   > .#{$divider} {
     & + .#{$card}__header,
     & + .#{$card}__title,
+    & + .#{$card}__description,
     & + .#{$card}__body,
     & + .#{$card}__footer {
       padding-block-start: var(--#{$card}--c-divider--child--PaddingBlockStart);
@@ -329,11 +329,6 @@
   overflow-wrap: var(--#{$card}__title-text--OverflowWrap);
 }
 
-.#{$card}__description {
-  padding-block-start: var(--#{$card}__description--PaddingBlockStart);
-  font-size: var(--#{$card}__description--FontSize);
-  color: var(--#{$card}__description--Color);
-}
 
 .#{$card}__actions {
   display: flex;
@@ -347,6 +342,7 @@
   margin-inline-start: auto;
 
   + .#{$card}__title,
+  + .#{$card}__description,
   + .#{$card}__body,
   + .#{$card}__footer {
     padding: 0;
@@ -424,6 +420,7 @@
 
 .#{$card}__header,
 .#{$card}__title,
+.#{$card}__description,
 .#{$card}__body,
 .#{$card}__footer {
   padding-block-end: var(--#{$card}--child--PaddingBlockEnd);
