feat(data-list): added plain variant

--- a/src/patternfly/components/DataList/data-list.hbs
+++ b/src/patternfly/components/DataList/data-list.hbs
@@ -1,5 +1,6 @@
 <ul class="{{pfv}}data-list
   {{#if data-list--IsCompact}} pf-m-compact{{/if}}
+  {{#if data-list--IsPlain}} pf-m-plain{{/if}}
   {{#if data-list--modifier}} {{data-list--modifier}}{{/if}}"
   role="list"
   {{#if data-list--attribute}}
