--- a/src/patternfly/components/Tabs/tabs.scss
+++ b/src/patternfly/components/Tabs/tabs.scss
@@ -131,7 +131,7 @@ $pf-v6-c-tabs--spacer-map: build-spacer-map("none", "sm", "md", "lg", "xl", "2xl
   // Link accent
   --#{$tabs}--link-accent--start: 0; // needed to create react-token
   --#{$tabs}--link-accent--length: 0; // needed to create react-token
-  --#{$tabs}--link-accent--color: var(--#{$tabs}__item--m-current__link--after--BorderColor);
+  --#{$tabs}--link-accent--color: var(--pf-t--global--border--color--clicked); // var(--#{$tabs}__item--m-current__link--after--BorderColor);
   --#{$tabs}--link-accent--border-size: var(--#{$tabs}__item--m-current__link--after--BorderWidth);
   --#{$tabs}--link-accent--TransitionDuration: var(--pf-t--global--motion--duration--md);
   --#{$tabs}--link-accent--TransitionTimingFunction: var(--pf-t--global--motion--timing-function--decelerate);
